--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -2,3 +2,7 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+//$text-field-append-prepend-margin: 150px;
+//$text-field-filled-margin-top: 150px;
+//$input-dense-slot-margin-bottom: 16px
+
